--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "crypts-and-lizards-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
+  "main": "./src/App.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "coverage": "npm t -- --coverage",
     "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules App.ts"
   },
   "keywords": [
@@ -15,6 +16,35 @@
   ],
   "author": "Lendruk (Tiago)",
   "license": "MIT",
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": [
+      "src"
+    ],
+    "transform": {
+      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+    },
+    "setupFiles": [
+      "reflect-metadata"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.json"
+      }
+    },
+    "coverageThreshold": {
+      "global": {
+        "statements": 80,
+        "branches": 70,
+        "functions": 80,
+        "lines": 80
+      }
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!variables/.*)"
+    ]
+  },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
@@ -23,20 +53,22 @@
     "express": "^4.17.1",
     "inversify": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2",
+    "mongoose": "^6.1.9",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/xml2json": "^0.11.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.7",
     "prettier": "^2.3.2",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5",
     "xml2json": "^0.12.0"
