--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest",
     "coverage": "npm t -- --coverage",
-    "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules App.ts"
+    "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/App.ts"
   },
   "keywords": [
     "Node",
@@ -46,17 +46,17 @@
     ]
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "inversify": "^5.1.1",
+    "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.9",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.12",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.4",
@@ -70,7 +70,7 @@
     "prettier": "^2.3.2",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5",
+    "typescript": "^4.5.5",
     "xml2json": "^0.12.0"
   }
 }
