--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "jest",
     "coverage": "npm t -- --coverage",
-    "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/App.ts"
+    "start": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/App.ts",
+    "createPermissions": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules ./src/scripts/createPermissions"
   },
   "keywords": [
     "Node",
